Finished styling over each element

--- a/src/CSS/app.css
+++ b/src/CSS/app.css
@@ -1,10 +1,17 @@
 @import-normalize;
 @import "flashcard.css";
+@import "flashcard-list";
 
 *,
 *::before,
 *::after {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-size: 10px;
+}
+
+body {
+  background-color: #fcedda;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  margin: 0;
 }
