--- a/src/CSS/flashcard.css
+++ b/src/CSS/flashcard.css
@@ -1,4 +1,5 @@
 .card {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   height: 20rem;
   width: 18rem;
   margin: 1rem;
