--- a/src/CSS/flashcard-list.css
+++ b/src/CSS/flashcard-list.css
@@ -12,6 +12,7 @@
   margin: 0 15vw 0 15vw;
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
+  margin-bottom: 2rem;
 }
 
 .form-group {
@@ -19,6 +20,13 @@
   flex-direction: column;
   align-items: center;
   padding-top: 0.7rem;
+}
+
+.card-grid {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  gap: 1rem;
 }
 
 .button-container {
