--- a/src/CSS/flashcard-list.css
+++ b/src/CSS/flashcard-list.css
@@ -96,12 +96,6 @@
     width: 100vw;
     margin: 0;
   }
-  .button {
-    width: 70vw;
-  }
-}
-
-@media screen and (max-width: 654px) {
   .label {
     font-size: 1.7rem;
   }
@@ -110,5 +104,12 @@
   }
   .button {
     font-size: 1.5rem;
+    width: 70vw;
+  }
+}
+
+@media screen and (max-width: 260px) {
+  .card-grid {
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   }
 }
